--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,22 @@ footer {
   margin-top: 12px;
 }
 
+header {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  background-color: #fbf5ed;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 28px;
+}
+
+.counter {
+  color: #231d15;
+  font-size: 14px;
+}
+
 h1 {
   font-size: 128px;
   font-weight: 600;
