--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,8 @@ header {
 }
 
 .counter {
+  display: flex;
+  column-gap: 5px;
   color: #231d15;
   font-size: 14px;
 }
@@ -73,9 +75,9 @@ header {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   background-color: #fff;
-  overflow-y: scroll;
+  /* overflow-y: scroll;
   scrollbar-color: red orange;
-  scrollbar-width: thin;
+  scrollbar-width: thin; */
   position: relative;
 }
 
